MDEV-32938: DDL must check if not aborted before entering TOI

Signed-off-by: Julius Goryavsky <julius.goryavsky@mariadb.com>